# CSE100PA3

./: compressed.txt  decompressed.txt  meson.build  solution-compress.executable  solution-uncompress.executable  ~$umtest.docx
build_scripts/: build_reference_solution.sh
data/: harry.txt  war.txt
src/: FileUtils.hpp  compress.cpp  meson.build  uncompress.cpp
src/bitStream/: meson.build
src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp  meson.build
src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp  meson.build
src/encoder/: HCNode.hpp  HCTree.cpp  HCTree.hpp  meson.build
test/: meson.build  test_BitInputStream.cpp  test_BitOutputStream.cpp  test_HCNode.cpp  test_HCTree.cpp
